--- a/src/app/components/Admin/theater-form/theater-form.component.html
+++ b/src/app/components/Admin/theater-form/theater-form.component.html
@@ -9,6 +9,7 @@
                 type="text" 
                 class="form-control" 
                 placeholder="Name"
+                [(ngModel)]="theaterName"
             >
         </div>
         <div class="form-group py-2">
@@ -17,6 +18,7 @@
                 type="text" 
                 class="form-control" 
                 placeholder="Metro Location"
+                [(ngModel)]="metroLocation"
             >
         </div>
         <div class="form-group py-2">
@@ -25,6 +27,7 @@
                 type="text" 
                 class="form-control" 
                 placeholder="District"
+                [(ngModel)]="district"
             >
         </div>
         <div class="form-group py-2">
@@ -33,6 +36,7 @@
                 type="number" 
                 class="form-control" 
                 placeholder="Shows"
+                [(ngModel)]="shows"
             >
         </div>
         <div class="form-group py-2">
@@ -41,6 +45,7 @@
                 type="number" 
                 class="form-control" 
                 placeholder="Seating Capacity"
+                [(ngModel)]="seatingCapacity"
             >
         </div>
         <div class="form-group py-2">
@@ -49,6 +54,7 @@
                 type="file" 
                 class="form-control" 
                 placeholder="Image"
+                (change)="getFile($event)"
             >
             <div id="hoursHelp" class="form-text">Max size 70 Kb
                 <i *ngIf="file.size">
@@ -60,7 +66,7 @@
              </div>
         </div>
         <div class="form-group py-2">
-            <button class="btn btn-dark">Add</button>
+            <button class="btn btn-dark" (click)="handleSubmit()">Add</button>
         </div>
     </div>
 </div>
