--- a/src/app/components/Admin/movies-admin/movies-admin.component.html
+++ b/src/app/components/Admin/movies-admin/movies-admin.component.html
@@ -1,4 +1,4 @@
-<div class=" pt-4 px-4">
+<!-- <div class=" pt-4 px-4">
     <a routerLink="add" class="btn btn-info float-end">Add New Movie</a>
 </div>
 <div *ngIf="allMovies.length > 0" class="row p-2 px-4 w-100">
@@ -11,9 +11,29 @@
                 <h5 class="card-title">{{movie.movieName}}</h5>
                 <p class="card-text"><b>Duration:</b> {{movie.duration}}</p>
                 <p class="card-text"><b>Language:</b> {{movie.language}}</p>
-                <a [routerLink]="movie.movie_id" class="btn btn-warning">Edit</a>
+                <a [routerLink]="'edit/' + movie.movie_id" class="btn btn-warning">Edit</a>
                 <a class="ms-2 btn btn-danger" (click)="handleDelete(movie._id)">Delete</a>
             </div>
         </div>
+    </div>
+</div> -->
+
+<div *ngIf="allMovies.length > 0" class="row p-2 px-4 w-100">
+    <div 
+        class="col-lg-3 col-md-4 col-sm-12 mt-4 movie-card" 
+        *ngFor="let movie of allMovies" 
+    >
+        <div class="card-img" [ngStyle]="{'background-image': 'url(' + movie.thumbnail+ ')'}">
+            <div class="card-body p-3">
+                <h5 class="card-title pb-3">{{movie.movieName}}</h5>
+                <p class="card-text">
+                    <b>Duration:</b> {{movie.duration}} <br>
+                    <b>Language:</b> {{movie.language}}
+                </p>
+                <a [routerLink]="'edit/' + movie.movie_id" class="btn btn-warning">Edit</a>
+                <a class="ms-2 btn btn-danger" (click)="handleDelete(movie._id)">Delete</a>
+            </div>
+        </div>
+        heyy
     </div>
 </div>
