--- a/src/app/components/template/navbar/navbar.component.html
+++ b/src/app/components/template/navbar/navbar.component.html
@@ -24,7 +24,7 @@
                 <a href="#" class="nav-link">Signin</a>
             </li>
             <li class="nav-item pe-1">
-                <a href="#" class="nav-link">Signup</a>
+                <a href="#" class="nav-link" routerLink="signup">Signup</a>
             </li>
         </ul>
       </div>
