--- a/src/app/components/Admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/Admin/admin-dashboard/admin-dashboard.component.html
@@ -23,6 +23,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="theaters" routerLinkActive="active">Theaters</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="shows" routerLinkActive="active">Shows</a>
+          </li>
          
         </ul>
         <!-- <form class="d-flex" role="search">
