--- a/src/app/components/Admin/theater-form/theater-form.component.html
+++ b/src/app/components/Admin/theater-form/theater-form.component.html
@@ -1,6 +1,6 @@
 <div>
     <div class="jumbotron p-3">
-        <h1 class="text-center">Add New Theater</h1>
+        <h1 class="text-center" *ngIf="!theater">Add New Theater</h1>
     </div>
     <div class="form-block">
         <div class="form-group py-2">
@@ -66,7 +66,8 @@
              </div>
         </div>
         <div class="form-group py-2">
-            <button class="btn btn-dark" (click)="handleSubmit()">Add</button>
+            <button class="btn btn-dark" (click)="handleSubmit()" *ngIf="!theater">Add</button>
+            <button class="btn btn-warning" (click)="handleUpdate()" *ngIf="theater">Update</button>
         </div>
     </div>
 </div>
