--- a/src/app/components/template/navbar/navbar.component.css
+++ b/src/app/components/template/navbar/navbar.component.css
@@ -1,6 +1,6 @@
 nav{
-    background: transparent;
-    /* color: #fff; */
+    background: var(--theme-yellow);
+    box-shadow: 0px -9px 20px #707070;
 }
 
 .navbar-brand{
