--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,11 @@
+:root {
+    --theme-yellow: #ffd72c;
+}
+
+.theme-yellow-bg{
+    background: var(--theme-yellow);
+}
+
 *{
     padding: 0;
     margin: 0;
