--- a/src/app/components/Admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/components/Admin/admin-dashboard/admin-dashboard.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Admin Dashboard</a>
+      <a class="navbar-brand" routerLink="admin">Admin Dashboard</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -34,10 +34,7 @@
         </form> -->
         <ul class="navbar-nav">
             <li class="nav-item pe-2">
-                <a href="#" class="nav-link">Signin</a>
-            </li>
-            <li class="nav-item pe-1">
-                <a href="#" class="nav-link">Signup</a>
+                <button class="btn text-warning nav-link" (click)="handleLogout()">Logout</button>
             </li>
         </ul>
       </div>
