--- a/src/app/components/template/navbar/navbar.component.html
+++ b/src/app/components/template/navbar/navbar.component.html
@@ -1,16 +1,24 @@
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Cinema Booking</a>
+      <a class="navbar-brand" routerLink="/">Cinema Booking</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" 
+              routerLinkActive="active" 
+              routerLink="/"
+              [routerLinkActiveOptions]="{ exact: true }"
+            >Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a 
+              class="nav-link"
+              routerLinkActive="active" 
+              routerLink="movies"
+            >Movies</a>
           </li>
           
          
@@ -19,14 +27,27 @@
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form> -->
-        <ul class="navbar-nav">
+        <ul class="navbar-nav" *ngIf="!authService.isLoggedIn()">
             <li class="nav-item pe-2">
-                <a href="#" class="nav-link">Signin</a>
+                <a href="#" class="nav-link" routerLinkActive="active" routerLink="/signin">Signin</a>
             </li>
             <li class="nav-item pe-1">
-                <a href="#" class="nav-link" routerLink="signup">Signup</a>
+                <a href="#" class="nav-link" routerLinkActive="active" routerLink="/signup">Signup</a>
             </li>
         </ul>
+        <ul class="navbar-nav" *ngIf="authService.isLoggedIn()">
+          <li class="nav-item pe-2">
+            <a 
+              class="btn nav-link text-danger" 
+              routerLink="admin"
+              routerLinkActive="active"
+              *ngIf="authService.isAdmin()"
+            >Admin Dashboard</a>
+          </li>
+          <li class="nav-item pe-2">
+              <button class="btn nav-link text-danger" (click)="handleLogout()">Logout</button>
+          </li>
+      </ul>
       </div>
     </div>
   </nav>
